# capstone_project

./: README.md
backend/: .env  Cargo.toml
backend/src/: blockchain.rs  crypto.rs  db.rs  identity.rs  main.rs  pbft.rs  tsbt.rs  ws.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AdminPortal.jsx  ConsensusVisualizer.jsx  Explorer.jsx  VoterPortal.jsx
